# myportfolio

./: .dockerignore  .env.example  .gitignore  .npmrc  Cargo.toml  Dockerfile  README.md  _docker.md  compose.yml  do_app.yaml  do_app_spec.yaml  docker-compose.yaml  graphql.config.yml  lighthouse.sh  next.config.js  notes.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  strapi.graphql  strapi.ts  tailwind.config.js  todo.md  todos.md  tsconfig.json  turbo.json
app/: InnerLayout.tsx  _tailwind.css  error.tsx  fragments.graphql  head.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx  query-global.graphql  query-page.graphql  query.graphql  tailwind.css
components/: .example  Button.module.scss  Button.tsx  Container.tsx  HoverEffect.tsx  Markdonw.tsx  QuickMessage.tsx  Separator.module.css  Separator.tsx  SuperComponent.tsx  Typo.module.scss  Typo.tsx
frontend/: .env.example  .eslintignore  .gitignore  README.md  build_from_mdx.js  codegen.ts  fragments.graphql  package-lock.json  package.json  pnpm-lock.yaml  schema.graphql  tsconfig.json  unocss.config.ts  vite.config.ts
frontend_2/: .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml  unocss.config.ts  vite.config.ts
graphql/: codegen.ts  query.tsx  schema.graphql  schema.tsx
pages/: 404.tsx  _app.tsx  index.tsx  server.server.tsx
public copy/: logo.psd
src/: main.rs
strapi/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  docker-compose.yaml  docker-script.js  dockerfile  package-lock.json  package.json  schemas.d.ts  tsconfig.json
(+230 files in other folders)
