[package]
name = "cms"
version = "0.1.0"
edition = "2021"

[dependencies]

queries_for_sqlx = { path = "../uniapi/query" }
cms_for_rust = { path = "../uniapi/cms" }
sqlx = { version = "0.7.4", features = ["postgres", "sqlite"] }
serde = "1.0.210"
tokio = { version = "1.41.0", features = ["full"] }
axum = "0.7.7"
tower = "0.5.1"
hyper = { version = "1.5.0", features = ["full"] }
